logs/ld4apps.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LD4Apps-0.9.7.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.4.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/ld4apps'...
Compiling './lib/python3.5/site-packages/ld4apps/example_logic_tier.py'...
***   File "./lib/python3.5/site-packages/ld4apps/example_logic_tier.py", line 586
    print 'resource_from_object_in_query_string is deprecated - use resource_from_membershipResource_in_query_string'
                                                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ld4apps/logic_server.py'...
***   File "./lib/python3.5/site-packages/ld4apps/logic_server.py", line 320
    print body.data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ld4apps/mongodbstorage'...
Compiling './lib/python3.5/site-packages/ld4apps/mongodbstorage/operation_primitives.py'...
***   File "./lib/python3.5/site-packages/ld4apps/mongodbstorage/operation_primitives.py", line 48
    except ConnectionFailure, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ld4apps/rdf_json.py'...
***   File "./lib/python3.5/site-packages/ld4apps/rdf_json.py", line 262
    print "Obsolete function RDF_JSON_Document.getValue() - use get_value() instead."
                                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ld4apps/test'...
Compiling './lib/python3.5/site-packages/ld4apps/test/test_utils.py'...
***   File "./lib/python3.5/site-packages/ld4apps/test/test_utils.py", line 48
    print '######## FAILED TO GET url: %s status_code: %s response_text: %s ' % (url, r.status_code, r.text)
                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-2.7.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.2.egg-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.0.egg-info'...
Listing './lib/python3.5/site-packages/rdflib_jsonld'...
Listing './lib/python3.5/site-packages/rdflib_jsonld-0.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/firefox3-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/firefox3-2pnglongtext'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/ie6-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/opera8-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/multipart/webkit3-2png1txt'...
Listing './lib/python3.5/site-packages/werkzeug/testsuite/res'...
Listing './share'...
Listing './share/python-wheels'...
